2017-01-12 Gregory L. Lee <lee218@llnl.gov>
	* : Added ability to launch multiple daemons per node

2016-09-06 Gregory L. Lee <lee218@llnl.gov>
	* backend.cpp : Re-enable struct member gathering, fix offset calculation (bits vs bytes)

2016-08-24 Gregory L. Lee <lee218@llnl.gov>
	* : Updatd documentation

2016-08-24 Gregory L. Lee <lee218@llnl.gov>
	* STAT_BackEnd.C : Encapsulate DySect BE code

2016-08-10 Gregory L. Lee <lee218@llnl.gov>
	* STAThelper.py : Handle empty edge labels
	* STAT_BackEnd.C : fix test for detached/exited procs

2016-08-09 Gregory L. Lee <lee218@llnl.gov>
	* : fixed handling of external events
	* : build system fixes

2016-06-22 Gregory L. Lee <lee218@llnl.gov>
	* : Cray fixes

2016-06-06 Gregory L. Lee <lee218@llnl.gov>
	* : Renamed Cray build option to --with-cray-alps

2016-05-23 Gregory L. Lee <lee218@llnl.gov>
	* : Graphlib 2.0 fix with threads

2016-05-20 Gregory L. Lee <lee218@llnl.gov>
	* : Graphlib 2.0 fixes

2016-03-31 Gregory L. Lee <lee218@llnl.gov>
	* STATview.py, STAThelper.py : truncate edge labels when exporting STAT graphs to non-.dot formats

2016-03-09 Gregory L. Lee <lee218@llnl.gov>
	* : Modified libdepositcore action

2016-03-04 Gregory L. Lee <lee218@llnl.gov>
	* : Added immediate actions

2015-12-01 Gregory L. Lee <lee218@llnl.gov>
	* STAT_BackEnd.C : use edge attributes
	* : track thread count in edges
	* : static and dynamic code analysis fixes

2015-11-02 Gregory L. Lee <lee218@llnl.gov>
	* STATview.py : migrate to edge attributes instead of label
	* : no longer generate edge labels

2015-10-28 Gregory L. Lee <lee218@llnl.gov>
	* : added ability to record Thread ID

2015-10-23 Gregory L. Lee <lee218@llnl.gov>
	* : added OpenMP OMPD support (prototype from Lai Wei)

2015-10-20 Gregory L. Lee <lee218@llnl.gov>
	* : added stat type attribute to .dot files

2015-10-19 Gregory L. Lee <lee218@llnl.gov>
	* : bug fixes to resolve compiler warnings

2015-10-15 Gregory L. Lee <lee218@llnl.gov>